# Iknos

./: .dockerignore  .env.example  .gitignore  CI_MIGRATIONS.md  HANDOFF.md  MIGRATIONS.md  README.md  compose.prod.yaml  compose.yaml  pyproject.toml  stack.env
.claude/: prompts.md
.github/workflows/: lint.yml  migrations.yml  tests.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20260601_0001_initial_schema.py  20260602_0002_add_document_embeddings.py  20260603_0003_proposition_layer.py  20260609_0004_schema_revision.py  20260609_0005_span_embedding_unique.py  20260610_0006_actions_target_span_index.py  20260611_0007_age_label_indexes.py  20260611_0008_actions_extract_fact_index.py  20260611_0008_embedding_model_identity.py  20260611_0009_actions_extract_fact_index.py  20260611_0010_actions_ingest_indexes.py  20260611_0011_anchors_to_label.py  20260611_0012_actions_content_hash_index.py  20260612_0013_embedding_hnsw_indexes.py  20260612_0014_baseline_chunks.py  20260612_0015_action_metrics.py
app/: README.md
cheatsheets/: tmux-cheatsheet.md
docker/: api.Dockerfile  postgres.Dockerfile
docs/: Scale_limits.md  architecture.md  gap_phase_0_foundations.md  gap_phase_0_residual.md  gap_phase_1_ingest.md  gap_phase_2_graph_construction.md  gap_phase_3_reasoning_core.md  gap_phase_4_linking_adjudication.md  gap_review_2026-06.md  iknos-pipeline-reference.html  proposition_layer_plan.md  review_2026-06-11_planned_architecture_assessment.md  todo.md  todo_phase_0_foundations.md  todo_phase_1_ingest.md  todo_phase_2_graph_construction.md  todo_phase_3_reasoning_core.md  todo_phase_4_linking_adjudication.md  todo_phase_5_temporal_revision.md  todo_phase_6_investigation_runtime.md  todo_phase_7_expert_interface.md  todo_presentation_views.md  todo_trials.md
docs/archive/: README.md  gap_phase_0_foundations.md  gap_review_2026-06-11.md  gap_review_2026-06.md  review_2026-06-11_post_phase4_review.md  review_2026-06-12_completed_scope_residuals.md  review_2026-06_architecture_and_plan.md  review_2026-06_architecture_plan.md  todo_ingest.md
docs/trials/: README.md  a1_refuter_recall.md  b2_cyclic_oscillation.md  baseline_runbook.md  c3_age_density_benchmark.md  (+4 more)
scripts/: a1_refuter_recall.py  b2_cyclic_oscillation.py  c3_age_density_benchmark.py  illustrate.py  reembed.py  run_baseline.py  run_gate_ingest.py
(+216 files in other folders)
