[project]
name = "iknos"
version = "0.1.0"
description = "Self-hosted non-monotonic reasoning graph for expert investigations"
requires-python = ">=3.12"
dependencies = [
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30",
  "psycopg[binary]>=3.2",
  "alembic>=1.14",
  "pydantic>=2.10",
  "pydantic-settings>=2.7",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pgvector>=0.3.6",
  "transformers>=4.48.0",
  "torch>=2.5.1",
  "openai>=1.60.0",
  "tenacity>=9.0",
  "clingo>=5.8.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "ruff>=0.8",
  "mypy>=1.13",
  "hypothesis>=6.155.2",
]

[tool.pytest_asyncio]
mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iknos"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/iknos"]
plugins = ["pydantic.mypy"]

# pgvector ships no py.typed marker; ignore its missing stubs so strict mode does
# not flag the (typed-on-our-side) ORM that imports it.
[[tool.mypy.overrides]]
module = "pgvector.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
